--- a/app/src/main/res/layout/fragment_search_group.xml
+++ b/app/src/main/res/layout/fragment_search_group.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:elevation="5dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +70,7 @@
                 android:background="@android:drawable/spinner_background"
                 android:text="Filter"
                 android:textSize="20sp"
-                app:icon="@drawable/filter_full"
+                app:icon="@drawable/filter"
                 app:iconSize="32dp" />
 
         </LinearLayout>
@@ -79,9 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="5dp"
             android:layout_weight="9"
             android:background="@color/background" />
 
