--- a/app/src/main/res/layout/group_listview_row.xml
+++ b/app/src/main/res/layout/group_listview_row.xml
@@ -3,28 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="5dp"
+    android:background="@android:color/white"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical"
     android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    android:descendantFocusability="blocksDescendants">
+    android:paddingRight="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:clickable="false">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/listview_group_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title"
-            android:textColor="@color/black"
-            android:focusableInTouchMode="false"
             android:clickable="false"
             android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:text="Title"
+            android:textColor="@color/black"
             android:textSize="24sp" />
 
     </LinearLayout>
@@ -33,37 +35,37 @@
         android:id="@+id/tagLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:clickable="false">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="tag"
-            android:focusableInTouchMode="false"
             android:clickable="false"
-            android:focusable="false"/>
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:text="tag" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:clickable="false">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/listview_group_creator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Creator"
-            android:focusableInTouchMode="false"
             android:clickable="false"
             android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:text="Creator"
             android:textColor="@color/browser_actions_title_color" />
 
     </LinearLayout>
@@ -72,11 +74,11 @@
         android:id="@+id/listview_group_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="3"
-        android:text="Description"
-        android:focusableInTouchMode="false"
         android:clickable="false"
         android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:maxLines="3"
+        android:text="Description"
         android:textColor="#514F4F" />
 
 </LinearLayout>
