--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,6 +13,11 @@
         android:title="@string/title_dashboard"/>
 
     <item
+        android:id="@+id/navigation_chat"
+        android:icon="@drawable/chat"
+        android:title="@string/title_chat"/>
+
+    <item
         android:id="@+id/navigation_search"
         android:icon="@android:drawable/ic_search_category_default"
         android:title="@string/title_search" />
