--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -22,6 +22,11 @@
 <!--        android:name="com.teamred.checkmate.ui.notifications.NotificationsFragment"-->
 <!--        android:label="@string/title_notifications"-->
 <!--        tools:layout="@layout/fragment_notifications" />-->
+    <fragment
+        android:id="@+id/navigation_chat"
+        android:name="com.teamred.checkmate.ui.search.SearchGroupFragment"
+        android:label="@string/title_chat"
+        tools:layout="@layout/fragment_chat" />
 
     <fragment
         android:id="@+id/navigation_search"
