--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -24,7 +24,7 @@
 <!--        tools:layout="@layout/fragment_notifications" />-->
     <fragment
         android:id="@+id/navigation_chat"
-        android:name="com.teamred.checkmate.ui.chat.ChatFragment"
+        android:name="com.teamred.checkmate.ui.chat.ChatDetailFragment"
         android:label="@string/title_chat"
         tools:layout="@layout/fragment_chat" />
 
