--- a/app/src/main/res/layout/main_calendar_tab.xml
+++ b/app/src/main/res/layout/main_calendar_tab.xml
@@ -24,43 +24,32 @@
         app:compactCalendarTextSize="12sp" />
 
     <Button
+        android:id="@+id/prev_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/compactcalendar_view"
         android:layout_alignParentLeft="true"
-        android:id="@+id/prev_button"
-        android:text="Scroll Left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_margin="5dp"
+        android:background="@drawable/roundedbutton"
+        android:text="Prev" />
 
 
     <Button
+        android:id="@+id/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/compactcalendar_view"
         android:layout_alignParentRight="true"
-        android:id="@+id/next_button"
-        android:text="Scroll Right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_margin="5dp"
+        android:background="@drawable/roundedbutton"
+        android:text="Next" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:id="@+id/calendar_control_buttons"
         android:layout_below="@+id/prev_button"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:layout_below="@+id/compactcalendar_view"
-            android:text="Change Locale"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/set_locale" />
-
-        <Button
-            android:layout_below="@+id/compactcalendar_view"
-            android:text="Remove all events"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/remove_all_events" />
-    </LinearLayout>
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -69,26 +58,29 @@
         android:layout_below="@+id/calendar_control_buttons"
         android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/slide_calendar"
-            android:text="Slide animation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-
-        <Button
-            android:id="@+id/show_with_animation_calendar"
-            android:text="Expose animation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
     </LinearLayout>
 
     <ListView
         android:id="@+id/bookings_listview"
-        android:layout_below="@+id/calendar_control_buttons_2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </ListView>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/calendar_control_buttons_2"></ListView>
+
+    <Button
+        android:id="@+id/show_with_animation_calendar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/calendar_control_buttons"
+        android:layout_below="@+id/compactcalendar_view"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="0dp"
+        android:layout_toStartOf="@+id/next_button"
+        android:layout_toEndOf="@+id/prev_button"
+        android:background="@drawable/roundedbutton"
+        android:textSize="12sp"
+        android:layout_margin="5dp"
+        android:text="show / hide calendar" />
 
 </RelativeLayout>
