--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -24,9 +24,9 @@
 <!--        tools:layout="@layout/fragment_notifications" />-->
     <fragment
         android:id="@+id/navigation_chat"
-        android:name="com.teamred.checkmate.ui.chat.ChatDetailFragment"
+        android:name="com.teamred.checkmate.ui.chat.ChatFragment"
         android:label="@string/title_chat"
-        tools:layout="@layout/fragment_chat" />
+        tools:layout="@layout/fragment_chat_main" />
 
     <fragment
         android:id="@+id/navigation_search"
